--- a/MoneyM/Localizable.xcstrings
+++ b/MoneyM/Localizable.xcstrings
@@ -69,6 +69,23 @@
         }
       }
     },
+    "amount_textfield_has_number.error" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "The amount text field must contain only a number!"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "В поле должно быть только число!"
+          }
+        }
+      }
+    },
     "amount.title" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -329,6 +346,23 @@
         }
       }
     },
+    "enter_amount.error" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Enter amount!"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Введите сумму"
+          }
+        }
+      }
+    },
     "entertainment.category" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -342,6 +376,23 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Развлечения"
+          }
+        }
+      }
+    },
+    "error.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Error"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Ошибка"
           }
         }
       }
@@ -506,6 +557,23 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Заметка"
+          }
+        }
+      }
+    },
+    "ok.title" : {
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Okay"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Хорошо"
           }
         }
       }
